# better-than-fluffy-tribble

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/: auto_assign.yml
.github/workflows/: build.yml  linters.yml  tests.yml
cmake/: Antlr.cmake
docs/: design_document.md  diagrams.md  documentation.md
grammar/: Shell.g4
include/: antlr_parser.h  antlr_support.h  ast_nodes.h  channel.h  common.h  environment.h  executor.h  parser.h  preprocessor.h  shell_repl.h
include/commands/: echo.h  icommand.h  registry.h
include/executor/: channel.h  executor.h
include/executor/commands/: cat.h  echo.h  exit.h  external.h  grep.h  icommand.h  pwd.h  registry.h  wc.h
include/parser/: antlr_parser.h  antlr_support.h  iparser.h  preprocessor.h
src/: CMakeLists.txt  antlr_parser.cpp  antlr_support.cpp  channel.cpp  environment.cpp  executor.cpp  main.cpp  shell_repl.cpp
src/commands/: echo.cpp
src/executor/: CMakeLists.txt  channel.cpp  executor.cpp
src/executor/commands/: CMakeLists.txt  cat.cpp  echo.cpp  exit.cpp  external.cpp  grep.cpp  pwd.cpp  wc.cpp
src/parser/: CMakeLists.txt  antlr_parser.cpp  antlr_support.cpp
test/: run_all_tests.sh
test/integration/: cat_file.expected  cat_file.input  echo_basic.expected  echo_basic.output  echo_multiple.expected  echo_multiple.input  env_test.expected  env_test.input  external_env_test.expected  external_env_test.input  grep_file.expected  grep_file.input  grep_file.input_file_1  grep_file.input_file_2  pwd_test.expected  run_all_tests.sh  run_test.sh  test_data.txt  unknown_command_test.expected  unknown_command_test.input  wc_test.expected  wc_test.input
tests/: CMakeLists.txt  test_channel.cpp  test_channel.h  test_commands.cpp  test_commands.h  test_mock_channels.cpp  test_mock_channels.h  test_registry.cpp  test_registry.h
